perf: more efficient data storage structure (#1034)
Signed-off-by: Francois Bojarski <francois.bojarski@consensys.net>