@@ -24,9 +24,11 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import lombok.Getter;
+import lombok.experimental.Accessors;
 import net.consensys.linea.zktracer.ColumnHeader;
-import net.consensys.linea.zktracer.container.stacked.set.StackedSet;
-import net.consensys.linea.zktracer.module.Module;
+import net.consensys.linea.zktracer.container.module.OperationSetModule;
+import net.consensys.linea.zktracer.container.stacked.StackedSet;
 import net.consensys.linea.zktracer.module.wcp.Wcp;
 import net.consensys.linea.zktracer.opcode.OpCode;
 import org.apache.tuweni.bytes.Bytes;
@@ -35,11 +37,13 @@ import org.hyperledger.besu.evm.frame.MessageFrame;
 import org.hyperledger.besu.evm.worldstate.WorldView;
 import org.hyperledger.besu.plugin.data.ProcessableBlockHeader;
 
-public class Blockhash implements Module {
+@Getter
+@Accessors(fluent = true)
+public class Blockhash implements OperationSetModule<BlockhashOperation> {
   private final Wcp wcp;
-
   private final StackedSet<BlockhashOperation> operations = new StackedSet<>();
-  private final List<BlockhashOperation> sortedOperations = new ArrayList<>();
+
+  List<BlockhashOperation> sortedOperations;
 
   /* Stores the result of BLOCKHASH if the result of the opcode is not 0 */
   private final Map<Bytes32, Bytes32> blockHashMap = new HashMap<>();
@@ -64,16 +68,6 @@ public class Blockhash implements Module {
   }
 
   @Override
-  public void enterTransaction() {
-    this.operations.enter();
-  }
-
-  @Override
-  public void popTransaction() {
-    this.operations.pop();
-  }
-
-  @Override
   public void traceStartBlock(final ProcessableBlockHeader processableBlockHeader) {
     this.relativeBlock += 1;
     this.absoluteBlockNumber = processableBlockHeader.getNumber();
@@ -94,9 +88,8 @@ public class Blockhash implements Module {
       If a BLOCK_NUMBER is already called at least two times, no need for additional rows in WCP*/
       final int numberOfCall = this.numberOfCall.getOrDefault(this.opcodeArgument, 0);
       if (numberOfCall < 2) {
-        this.wcp.additionalRows.push(
-            this.wcp.additionalRows.pop()
-                + Math.max(Math.min(LLARGE, this.opcodeArgument.trimLeadingZeros().size()), 1));
+        wcp.additionalRows.add(
+            Math.max(Math.min(LLARGE, this.opcodeArgument.trimLeadingZeros().size()), 1));
         this.numberOfCall.replace(this.opcodeArgument, numberOfCall, numberOfCall + 1);
       }
     }
@@ -107,7 +100,7 @@ public class Blockhash implements Module {
     final OpCode opCode = OpCode.of(frame.getCurrentOperation().getOpcode());
     if (opCode == OpCode.BLOCKHASH) {
       final Bytes32 result = Bytes32.leftPad(frame.getStackItem(0));
-      this.operations.add(
+      operations.add(
           new BlockhashOperation(
               this.relativeBlock,
               this.opcodeArgument,
@@ -123,22 +116,17 @@ public class Blockhash implements Module {
 
   @Override
   public void traceEndConflation(WorldView state) {
-    this.sortedOperations.addAll(this.operations);
-    if (!this.sortedOperations.isEmpty()) {
+    OperationSetModule.super.traceEndConflation(state);
+    sortedOperations = new ArrayList<>(operations.getAll());
+    if (!sortedOperations.isEmpty()) {
       final BlockhashComparator BLOCKHASH_COMPARATOR = new BlockhashComparator();
-      this.sortedOperations.sort(BLOCKHASH_COMPARATOR);
-      this.wcp.callGEQ(this.sortedOperations.get(0).opcodeArgument(), Bytes32.ZERO);
-      for (int i = 1; i < this.sortedOperations.size(); i++) {
-        this.wcp.callGEQ(
-            this.sortedOperations.get(i).opcodeArgument(),
-            this.sortedOperations.get(i - 1).opcodeArgument());
+      sortedOperations.sort(BLOCKHASH_COMPARATOR);
+      wcp.callGEQ(sortedOperations.getFirst().opcodeArgument(), Bytes32.ZERO);
+      for (int i = 1; i < sortedOperations.size(); i++) {
+        wcp.callGEQ(
+            sortedOperations.get(i).opcodeArgument(), sortedOperations.get(i - 1).opcodeArgument());
       }
     }
-  }
-
-  @Override
-  public int lineCount() {
-    return this.operations.lineCount();
   }
 
   @Override
@@ -149,7 +137,7 @@ public class Blockhash implements Module {
   @Override
   public void commit(List<MappedByteBuffer> buffers) {
     final Trace trace = new Trace(buffers);
-    for (BlockhashOperation op : this.sortedOperations) {
+    for (BlockhashOperation op : sortedOperations) {
       final Bytes32 hash =
           op.result() == Bytes32.ZERO
               ? this.blockHashMap.getOrDefault(op.opcodeArgument(), Bytes32.ZERO)
